test/expect/cmd.cc-paren-nested.stderr.txt
^error: '--castxml-cc-gnu' compiler command failed:

 '\(' '\)' .*$
